* Enable `available_ports()` for Linux musl targets and those without the `libudev`
  feature enabled by scanning `/sys/` for ports.
* `ENOENT` and `EACCES` errors are now exposed as `NotFound` and `PermissionDenied` errors on Linux
* `try_clone_native()` was added to `COMPort` and `TTYPort` to complement `SerialPort::try_clone()`
  but returning the concrete type instead.

==== Changed
* Minimum supported Rust version is now 1.36.0 to support the `mem::MaybeUninit` feature.
* The platform-specific `TTYPort`/`BreakDuration` and `COMPort` are now at the root level rather
  than under the `posix` and `windows` submodules respectively.
* Opening `SerialPort` s now uses a the builder pattern through `serialport::new()`. See the
  README for concrete examples.
* `SerialPorts`s are no longer opened with a default timeout of 1ms
* Under linux, the `manufacturer` and `product` fields of `UsbPortInfo` now take their values from
  the `ID_VENDOR_FROM_DATABASE` and `ID_MODEL_FROM_DATABASE` udev properties respectively, instead
  of the `ID_VENDOR` and `ID_MODEL` properties that were used before. When the `_FROM_DATABASE`
  values are not available, it falls back to the old behavior. https://gitlab.com/susurrus/serialport-rs/merge_requests/86[!86]

==== Fixed
* Raised the version specification for `bitflags` to 1.0.4. Previously it was
  set to 1.0.0, but this version of `bitflags` is actually incompatible with
  Rust 2018 style macro imports that `serialport-rs` requires.

==== Removed
* Removed the `serialport::prelude` module. Types should be explicitly imported
  or can be glob-imported from the root like `use serialport::*`.

=== [3.3.0] - 2019-06-12
==== Added
* Added support for arbitrary baud rates on Mac OS X and iOS

==== Changed
* Minimum supported Rust version is now 1.31 to support using the 2018 edition of Rust.

==== Fixed
* Upgraded `sparc64-unknown-linux-gnu` to Tier 2 support

==== Removed

=== [3.2.0] - 2019-01-01
==== Added